Fix reviews carousel, floating widget, custom block add, and CMS tablet spacing

--- a/packages/cms/src/index.css
+++ b/packages/cms/src/index.css
@@ -50,8 +50,15 @@
   }
 }
 
+html {
+  height: 100%;
+  height: 100dvh;
+}
+
 body {
   margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 #root {
@@ -60,10 +67,12 @@ body {
   margin: 0;
   text-align: left;
   border-inline: none;
-  min-height: 100svh;
+  height: 100%;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 #root > * {
